# vst3

./: CLAUDE.md  Makefile
dart_vst3_bridge/native/cmake/: VST3Bridge.cmake
plugin/: CMakeLists.txt
vsts/echo/: CMakeLists.txt  Info.plist.in  pubspec.yaml
vsts/echo/include/: echo_ids.h
vsts/echo/lib/: echo.dart  main.dart
vsts/echo/lib/src/: echo_plugin.dart  echo_processor.dart  echo_vst3_processor.dart
vsts/echo/src/: echo_controller.cpp  echo_factory.cpp  echo_processor.cpp
vsts/echo/test/: echo_test.dart
vsts/flutter_reverb/: CMakeLists.txt  pubspec.yaml
vsts/flutter_reverb/example/: demo.dart
vsts/flutter_reverb/include/: reverb_ids.h
vsts/flutter_reverb/lib/: flutter_reverb.dart  main.dart
vsts/flutter_reverb/lib/src/: reverb_parameters.dart  reverb_plugin.dart  reverb_processor.dart  reverb_ui.dart  reverb_vst3_processor.dart
vsts/flutter_reverb/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
vsts/flutter_reverb/src/: reverb_controller.cpp  reverb_factory.cpp  reverb_processor.cpp
vsts/flutter_reverb/test/: reverb_test.dart
